<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/faculty_attendance_id"
    app:cardBackgroundColor="#19235A"
    android:layout_marginBottom="5dp"
    android:layout_marginTop="5dp"
    android:layout_marginLeft="1dp"
    android:layout_marginRight="1dp"
    app:cardCornerRadius="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:id="@+id/fragmentAttendance">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/faculty_0001"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="2.5dp"
            android:layout_marginBottom="2.5dp"
            android:clickable="true"
            android:focusable="true">

            <TextView android:id="@+id/fullName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:text="@string/full_name_textView"
                android:textSize="23sp"
                android:textColor="@color/colorDarkWhite"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/classTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:text="@string/class_time_textView"
                android:textSize="12sp"
                android:textColor="@color/colorDarkWhite"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/subject"/>

            <TextView
                android:id="@+id/subject"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:textSize="12sp"
                android:text="@string/subject_code_textView"
                android:textColor="@color/colorDarkWhite"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/roomNumber"/>

            <TextView
                android:id="@+id/roomNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="16dp"
                android:text="@string/room_number_textView"
                android:textColor="@color/colorDarkWhite"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fullName"/>

            <Button
                android:id="@+id/present"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/checkingbutton"
                android:text="@string/present_button"
                android:textColor="@color/colorTimeBlue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/absent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/checkingbutton"
                android:text="@string/absent_button"
                android:textColor="@color/colorRed"
                app:layout_constraintEnd_toStartOf="@+id/present"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/firstTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:layout_marginEnd="8dp"
                android:text="@string/first_time_textView"
                android:textColor="@color/colorDarkWhite"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/present" />

            <TextView
                android:id="@+id/secondTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:text="@string/second_time_textView"
                android:textColor="@color/colorDarkWhite"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/firstTime"/>

            <TextView
                android:id="@+id/notice_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/notice_count"
                android:textAlignment="center"
                android:textColor="@color/colorDarkWhite"
                app:layout_constraintStart_toEndOf="@+id/fullName"
                app:layout_constraintTop_toTopOf="parent"/>

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="100dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/absent">

                <RadioButton
                    android:id="@+id/firstCheck"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/first_check_radio"
                    android:textColor="@color/colorDarkWhite"
                    android:textSize="12sp"
                    tools:layout_editor_absoluteX="187dp"
                    tools:layout_editor_absoluteY="56dp"/>

                <RadioButton
                    android:id="@+id/secondCheck"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/second_check_radio"
                    android:textColor="@color/colorDarkWhite"
                    android:textSize="12sp"
                    tools:layout_editor_absoluteX="187dp"
                    tools:layout_editor_absoluteY="56dp"/>
            </RadioGroup>

            <Button
                android:id="@+id/viewImageButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/checkingbutton"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/view_images_button"
                android:textColor="@color/colorTimeBlue"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/classTime"/>

        </android.support.constraint.ConstraintLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>